//file:noinspection SpellCheckingInspection
plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'com.diffplug.spotless' version '6.25.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    withJavadocJar()
    withSourcesJar()
}

// enable parameter names retention
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-parameters']
}

spotless {
    java {
        palantirJavaFormat('2.61.0')
    }
}

tasks.named('compileJava') {
    dependsOn 'spotlessApply'
}


group = 'org.llmtoolkit'
version = '0.1.0'

repositories {
    mavenCentral()
}

ext {
    langchain4jVersion = '1.0.0-beta2'
    lombokVersion = '1.18.38'
    junitVersion = '5.9.2'
}


dependencies {
    implementation "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.3'

    implementation "dev.langchain4j:langchain4j:${langchain4jVersion}"
    implementation "dev.langchain4j:langchain4j-open-ai:${langchain4jVersion}"
    implementation "dev.langchain4j:langchain4j-anthropic:${langchain4jVersion}"
    implementation "dev.langchain4j:langchain4j-google-ai-gemini:${langchain4jVersion}"

    implementation 'org.springframework:spring-web:6.2.5'
    implementation 'gg.jte:jte:3.2.0'

    implementation 'io.github.cdimascio:dotenv-java:3.2.0'

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.12.1'
}

test {
    useJUnitPlatform()
}

tasks.named('test') {
    useJUnitPlatform()
}


